cabal-version:      2.4
name:               twogather
version:            0.1.0.0
license:            NONE
author:             Martin Penckert
maintainer:         martin.penckert@gmail.com
extra-source-files: CHANGELOG.md

executable twogather
    main-is:            Main.hs
    other-modules:      Dashboard
                      , Model.Record
                      , Model.Settlement
                      , Model.SettleState
                      , Server
    build-depends:      aeson
                      , base ^>=4.14.1.0
                      , bytestring
                      , http-api-data
                      , http-media
                      , lucid
                      , monad-logger
                      , mtl
                      , persistent
                      , persistent-template
                      , persistent-sqlite
                      , servant
                      , servant-server
                      , string-conversions
                      , text
                      , time
                      , wai
                      , warp
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
